Add configuration for current VAT rate

--- a/src/js/apps/codingtest/partials/expenses-content.html
+++ b/src/js/apps/codingtest/partials/expenses-content.html
@@ -21,7 +21,7 @@
             </li>
 			<li class="row">
 				<label>VAT</label>
-				<input type="text" placeholder="VAT" ng-model="newExpense.VAT" disabled/>
+				<input type="text" placeholder="VAT" ng-model="newExpense.vat" disabled/>
 			</li>
 			<li>
 				<label>Reason</label>
